	definition of x_i - \hat{x}. Reported by Andreas Plank and Steve
	Juggins.

	* plot.wa: Following changed definition of residuals, plot.wa()
	now plots observed values on the y-axis and fitted values on the
	x-axis for 'which = 1'.

	* summary.predict.mat: print method was incorrectly extracting
	the model estimates for training set samples.

	* Package: reduced package check time in examples, by using
	the Imbrie & Kipp data.

Version 0.6-23

	* tran: 'rootroot' transformation was same as 'cuberoot' from
	vhanges made in r140. Now fixed.

	* wa: 'formula' method was not passing tolerance-related arguments
	to default method. As such, the newer code to handle small
	tolerance values was not being invoked when using the formula
	interface to wa().

	Code was also tidied a bit.

	* fixUpTol: was inappropriately matching one of it's arguments.

	* roc: In some circumstances, the generation of the points at which
	the ROC curve was evaluated resulted in more points than the other
	statistics. Fixed to use the points established by 'table', used to
	generate these other statistics. This affected the plot method.

	* plot.roc: Allow user to specify the line types used to draw the
	plots. Two line types can be specified for plots comparing analogue
	with non-analogue statistics.

	New argument 'abline.lty', which defaults to "dashed", controls
	plotting of the optimal ROC dissimilarity threshold.

	* plot.minDC: argument 'lty.quantile' was not being used by the
	graphical function that drew the quantiles of the pairwise D[ij]s.

	* plot.bayesF: New argument 'abline.lty', which defaults to "dashed",
	controls plotting of the optimal ROC dissimilarity threshold.

Version 0.6-22

	* tran.formula: bug in my implementation of the standard
	non-standard evaluation technique used within the formula method
	for 'tran'. Diagnosis and fix by Prof. Brian Ripley.

Version 0.6-21

	* distx.c, distxy.c: Warning due to non ISO C-compliant 'mistake'